// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders first page 1`] = `
<div
  className="dataTables_wrapper dt-bootstrap"
>
  <div
    className="row"
  >
    <div
      className="col-sm-12"
    >
      <table
        className="dataTable table table-striped table-bordered"
      >
        <tbody>
          <tr>
            <td>
              The goods
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-5"
    >
      <div
        className="dataTables_info"
      >
        Showing 
        1
         to 
        10
         of 
        40
         entries
      </div>
    </div>
    <div
      className="col-sm-7"
    >
      <div
        className="dataTables_paginate paging_simple_numbers"
      >
        <ul
          className="pagination"
        >
          <li
            className="disabled"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              style={
                Object {
                  "pointerEvents": "none",
                }
              }
              tabIndex={-1}
            >
              <span
                aria-label="Previous"
              >
                Previous
              </span>
            </a>
          </li>
          <li
            className="active"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              1
            </a>
          </li>
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              2
            </a>
          </li>
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              3
            </a>
          </li>
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              4
            </a>
          </li>
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              <span
                aria-label="Next"
              >
                Next
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders intermediary page 1`] = `
<div
  className="dataTables_wrapper dt-bootstrap"
>
  <div
    className="row"
  >
    <div
      className="col-sm-12"
    >
      <table
        className="dataTable table table-striped table-bordered"
      >
        <tbody>
          <tr>
            <td>
              The goods
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-5"
    >
      <div
        className="dataTables_info"
      >
        Showing 
        11
         to 
        20
         of 
        40
         entries
      </div>
    </div>
    <div
      className="col-sm-7"
    >
      <div
        className="dataTables_paginate paging_simple_numbers"
      >
        <ul
          className="pagination"
        >
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              <span
                aria-label="Previous"
              >
                Previous
              </span>
            </a>
          </li>
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              1
            </a>
          </li>
          <li
            className="active"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              2
            </a>
          </li>
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              3
            </a>
          </li>
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              4
            </a>
          </li>
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              <span
                aria-label="Next"
              >
                Next
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders no items 1`] = `
<div
  className="dataTables_wrapper dt-bootstrap"
>
  <div
    className="row"
  >
    <div
      className="col-sm-12"
    >
      <table
        className="dataTable table table-striped table-bordered"
      >
        <tbody>
          <tr>
            <td>
              The goods
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-5"
    >
      <div
        className="dataTables_info"
      >
        Showing 
        0
         to 
        0
         of 
        0
         entries
      </div>
    </div>
    <div
      className="col-sm-7"
    >
      <div
        className="dataTables_paginate paging_simple_numbers"
      >
        <ul
          className="pagination"
        >
          <li
            className="disabled"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              style={
                Object {
                  "pointerEvents": "none",
                }
              }
              tabIndex={-1}
            >
              <span
                aria-label="Previous"
              >
                Previous
              </span>
            </a>
          </li>
          <li
            className="disabled"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              style={
                Object {
                  "pointerEvents": "none",
                }
              }
              tabIndex={-1}
            >
              <span
                aria-label="Next"
              >
                Next
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders total items equal to page count 1`] = `
<div
  className="dataTables_wrapper dt-bootstrap"
>
  <div
    className="row"
  >
    <div
      className="col-sm-12"
    >
      <table
        className="dataTable table table-striped table-bordered"
      >
        <tbody>
          <tr>
            <td>
              The goods
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-5"
    >
      <div
        className="dataTables_info"
      >
        Showing 
        31
         to 
        40
         of 
        40
         entries
      </div>
    </div>
    <div
      className="col-sm-7"
    >
      <div
        className="dataTables_paginate paging_simple_numbers"
      >
        <ul
          className="pagination"
        >
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              <span
                aria-label="Previous"
              >
                Previous
              </span>
            </a>
          </li>
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              1
            </a>
          </li>
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              2
            </a>
          </li>
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              3
            </a>
          </li>
          <li
            className="active"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              4
            </a>
          </li>
          <li
            className="disabled"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              style={
                Object {
                  "pointerEvents": "none",
                }
              }
              tabIndex={-1}
            >
              <span
                aria-label="Next"
              >
                Next
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders total items less than page count 1`] = `
<div
  className="dataTables_wrapper dt-bootstrap"
>
  <div
    className="row"
  >
    <div
      className="col-sm-12"
    >
      <table
        className="dataTable table table-striped table-bordered"
      >
        <tbody>
          <tr>
            <td>
              The goods
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-5"
    >
      <div
        className="dataTables_info"
      >
        Showing 
        31
         to 
        33
         of 
        33
         entries
      </div>
    </div>
    <div
      className="col-sm-7"
    >
      <div
        className="dataTables_paginate paging_simple_numbers"
      >
        <ul
          className="pagination"
        >
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              <span
                aria-label="Previous"
              >
                Previous
              </span>
            </a>
          </li>
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              1
            </a>
          </li>
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              2
            </a>
          </li>
          <li
            className=""
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              3
            </a>
          </li>
          <li
            className="active"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              4
            </a>
          </li>
          <li
            className="disabled"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              style={
                Object {
                  "pointerEvents": "none",
                }
              }
              tabIndex={-1}
            >
              <span
                aria-label="Next"
              >
                Next
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
